# mcts-rs

./: .gitignore  Cargo.toml  LICENSE-MIT
benches/: goban.rs  sticks.rs  sticks_game.rs
benches/goban/: main.rs
src/: edge.rs  lib.rs  mcts.rs  node.rs  path_iter.rs  probe_status.rs  process.rs  safe_nonnull.rs  step.rs  trace.rs
src/uct/: mod.rs  per_child.rs  state.rs  update.rs
tests/: ttt_is_draw.rs  ttt_lose.rs  ttt_wins.rs
tests/tic_tac_toe/: grid.rs  mcts.rs  mod.rs  per_child.rs  process.rs  state.rs  update.rs
