[package]
name = "mcts-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bench]]
name = "sticks"
harness = false

[[bench]]
name = "goban"
harness = false

[dev-dependencies]
criterion = "0.3"
goban = "0.17"
ordered-float = "3.0"
rand = "0.8"

[dependencies]
crossbeam = "0.8"
parking_lot = "0.12"
slab = "0.4"
smallvec = "1.8"
