[package]
name = "mcts-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bench]]
name = "sticks"
harness = false

[[bench]]
name = "goban"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

[dev-dependencies]
criterion = "0.3"
goban = "0.17"
ordered-float = "3.0"
rand = "0.8"
threadpool = "1.8"

[dependencies]
crossbeam-epoch = "0.9"
dashmap = "5.3"
smallvec = "1.8"
